kubernetes/catalog/bazarr/manifests/deployment.yaml
---
# Generated by InfraWeaver Community Apps from Unraid AppFeed
# Source: https://raw.githubusercontent.com/linuxserver/templates/main/unraid/bazarr.xml
# Category: MediaServer-Video, Tools-Utilities
# Stars: 482 | Downloads: 472605157
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: bazarr
  labels:
    app.kubernetes.io/name: bazarr
    app.kubernetes.io/managed-by: infraweaver
    infraweaver.io/source: community-apps
    infraweaver.io/tier: simple
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: bazarr
  template:
    metadata:
      annotations:
        infraweaver.io/rebalance-memory: "true"
      labels:
        app.kubernetes.io/name: bazarr
    spec:
      enableServiceLinks: false
      securityContext:
        fsGroup: 1000
      containers:
        - name: bazarr
          image: lscr.io/linuxserver/bazarr
          ports:
            - containerPort: 6767
              protocol: TCP
              name: webui
          startupProbe:
            tcpSocket:
              port: 6767
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 120
          readinessProbe:
            tcpSocket:
              port: 6767
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 6767
            periodSeconds: 30
            failureThreshold: 3
          volumeMounts:
            - name: bazarr-data-0
              mountPath: "/config"
            - name: tmp-movies
              mountPath: "/movies"
            - name: tmp-tv
              mountPath: "/tv"
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
      - name: bazarr-data-0
        persistentVolumeClaim:
          claimName: bazarr-data-0
      - name: tmp-movies
        emptyDir:
      - name: tmp-tv
        emptyDir:
---
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: bazarr
  labels:
    app.kubernetes.io/name: bazarr
    infraweaver.io/source: community-apps
spec:
  selector:
    app.kubernetes.io/name: bazarr
  ports:
    - port: 6767
      targetPort: 6767
      protocol: TCP
      name: webui
  type: ClusterIP
